@@ -1,0 +1,41 @@
+[Project]
+name: "libcdatetime"
+status: "alpha"
+description: "a library cross-platform C date and time functions"
+features: [
+    "git", "source_package",
+    "cygwin", "gcc", "mingw", "msvscpp",
+    "dpkg", "rpm"]
+
+[source_package]
+url: "https://googledrive.com/host/0B3fBvzttpiiSZmJKODlYaUoxamM/"
+
+[git]
+url: "https://github.com/libyal/libcdatetime/"
+
+[cygwin]
+build_dependencies: []
+dll_dependencies: [
+    "**TODO describe dependencies**"]
+dll_filename: "cygcdatetime-0.dll"
+
+[gcc]
+build_dependencies: []
+static_build_dependencies: []
+
+[mingw]
+build_dependencies: []
+dll_dependencies: [
+    "**TODO describe dependencies**"]
+dll_filename: "libcdatetime-1.dll"
+
+[msvscpp]
+build_dependencies: []
+dll_dependencies: []
+
+[dpkg]
+build_dependencies: []
+
+[rpm]
+build_dependencies: []
+
