@@ -3,6 +3,9 @@ TODO:
 * add a copy time elements from timestamp function?
 * clean up time elements string function, reuse code from libewf_date_time_values.c
 
+20140915
+* changes for project site move
+
 20140730
 * updated dpkg files
 
